--- a/css/style.css
+++ b/css/style.css
@@ -56,11 +56,22 @@ img {
 .heading-cnt {
     padding: 30px 24px;
 }
-
+select, option{
+    width: 150px !important;
+    font-family: 'Crimson Text', serif;
+}
 .heading-cnt h1 {
     font-family: 'Crimson Text', serif;
     font-weight: 700;
     font-size: 36px;
+    color: #200B00;
+    margin: 0;
+}
+
+.desired-part h4 {
+    font-family: 'Crimson Text', serif;
+    font-weight: 700;
+    font-size: 24px;
     color: #200B00;
     margin: 0;
 }
